--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource-variable/dm-sans": "^5.0.6",
     "@fontsource-variable/manrope": "^5.0.20",
     "@fontsource-variable/public-sans": "^5.0.19",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -21,6 +22,7 @@
     "lucide-react": "^0.396.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.4",
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.0",
     "tailwind-merge": "^2.3.0",
