--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.4",
+    "react-markdown": "^9.0.1",
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.0",
     "tailwind-merge": "^2.3.0",
