--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-helmet-async": "^2.0.5",
     "react-markdown": "^9.0.1",
+    "react-modal": "^3.16.1",
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.0",
     "tailwind-merge": "^2.3.0",
@@ -38,6 +39,7 @@
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
